Fixed the aaai.sty file

--- a/report/aaai.sty
+++ b/report/aaai.sty
@@ -234,8 +234,8 @@ Abstract}\vspace{0.5ex}\begin{quote}\small}{\par\end{quote}\vskip 1ex}
 \itemsep .01in % original
 %%\itemsep -.0125in % reduced space between bib entries
 %%% END changed
-}
+
 \def\newblock{\hskip .11em plus .33em minus .07em}
 \sloppy\clubpenalty4000\widowpenalty4000
-\sfcode`\.=1000\relax}
+\sfcode`\.=1000\relax
 \let\endthebibliography=\endlist
