REPORT: Fix formatting of Dataset in tex.

--- a/report/report.tex
+++ b/report/report.tex
@@ -115,19 +115,15 @@ Unlike most other methods, we do not assume that we have the disaggregated power
 Instead, we assume that we have accurate information about when each device is active, in the form of binary on-off indicators.
 
 \subsection{Dataset}
-As a basis to evaluate our approach we used the Reference Energy Disaggregation Data Set (REDD) \cite{Redd}, a collection of energy consumption data 
-from six houses where the mains, single devices and circuits were measured separately over two weeks. Even though the data set contains high-frequency 
-measurements we used the ones with frequencies between $1$ and $3 Hz$, to stay comparable to former works with similar frequencies. Since not all 
-devices exist in every house we focused on the most common ones: the dishwasher, washer-dryer-combinations (both in all houses), and refridgerator (in 5 
-out of 6 houses) as well as the microwave and stove (in all but two houses). Since the sum of all single devices and circuits does not sum up to the 
-measured overall consumption, because small devices like consumer electronics were not traced, we compared two different approaches one with noise 
-and one without. For the unnoised method we summed up only the consumption of the devices we used and took their sum as the aggregated energy consumption. 
-We checked these results against the ones where we subtracted the devices which were not of interest for us from the measured overall consumption, which 
-gave us a bigger than natural noise.\\
-Our goal was to work only with the information if a device is inactive or active, whereby active means that it is actually on and not only in a
-standby mode. To generate the  on/off-indicators we checked the dataset against a threshold $\delta$, assigning the device an indicator of $1$ if its 
-consumption in the relevent time step exceeded the threshhold and considering the device as inactive otherwise, assigning $0$. Using the threshold 
-eliminated the uninteresting phases of permant standby uses, as they are common especially in refridgerators.
+As a basis to evaluate our approach we used the Reference Energy Disaggregation Data Set (REDD) \cite{Redd}, a collection of energy consumption data from six houses where the mains, single devices and circuits were measured separately over two weeks.
+Even though the data set contains high-frequency measurements, we used the ones with frequencies between $1$ and $3 Hz$, to stay comparable to prior work with similar frequencies.
+Since not all devices exist in every house we focused on the most common ones: the dishwasher, washer-dryer-combinations (both in all houses), and refrigerator (in 5 out of 6 houses) as well as the microwave and stove (in all but two houses).
+Since the sum of all single devices and circuits does not sum up to the measured overall consumption, because small devices like consumer electronics were not traced, we compared two different approaches one with noise and one without.
+For the unnoised method we summed up only the consumption of the devices we used and took their sum as the aggregated energy consumption.
+We checked these results against the ones where we subtracted the devices which were not of interest for us from the measured overall consumption, which gave us a bigger than natural noise.\\
+Our goal was to work only with the information if a device is inactive or active, whereby active means that it is actually on and not only in a standby mode.
+To generate the on/off-indicators we checked the dataset against a threshold $\delta$, assigning the device an indicator of $1$ if its consumption in the relevent time step exceeded the threshhold and considering the device as inactive otherwise, assigning $0$.
+Using the threshold eliminated the uninteresting phases of permanent standby uses, as they are common especially in refrigerators.
 
 \subsection{Denoising Autoencoders}
 
