REPORT: Fix typo of refrigerator.

--- a/report/report.tex
+++ b/report/report.tex
@@ -220,8 +220,7 @@ To compare our methods with each other and with existing approaches, we focus on
 2. How well did we identify the single devices consumption?\\
 To address the first question we use the F1-Score, ensuring our results are comparable to the works in the section \textit{Literature}. The 
 advantage of the F1-Score is that it combines recall and precision and so avoids contortions, which would arise by considering only one of them. For example, assuming we 
-identify the refridgerator being active in all time steps we get a optimal recall value, but a low precision, whereas we get a optimal precision 
-by identifying the refridgerator never as active.
+identify the refrigerator being active in all time steps we get a optimal recall value, but a low precision, whereas we get a optimal precision by identifying the refrigerator never as active.
 \[ \textrm{Precision} = \frac{\textrm{Number of true positive elements}}{\textrm{Number of elements identified as positives}}  \]
 \[ \textrm{Recall} = \frac{\textrm{Number of true positives}}{\textrm{Number of elements that are indeed positive}}  \]
 \[ \textrm{F1-Score} = \frac{2 \cdot \textrm{Precision} \cdot \textrm{Recall}}{\textrm{Precision} + \textrm{Recall}}\]
