--- a/report/report.tex
+++ b/report/report.tex
@@ -46,7 +46,7 @@ NOTE: sub-metering is the word we want for measuring disaggregated energy signal
 \section{Introduction}
 
 Energy disaggregation, or non-intrusive load-monitoring (NILM), is the problem of estimating a household's individual appliance energy consumption given measurements from a single sensor which records the aggregate power consumption of the household over time.
-While measuring the power draw of each device in a home directly yields more accurate results than machine learned techniques, it usually involves expensive instrumentation of the devices we wish to measure the energy consumption of and intrusion into the home in order to set up power monitoring hardware.
+While measuring the power draw of each device in a home directly yields more accurate results than machine learned techniques, it usually involves either expensive instrumentation of the devices we wish to measure the energy consumption of or intrusion into the home in order to set up power monitoring hardware.
 Both situations are undesirable for the homeowner, so instead NILM makes use of already existing infrastructure combined with machine learned techniques, in order to provide an estimate of device energy consumption.
 
 Having access to disaggregated energy consumption is useful to homeowners, as studies have shown that when presented with this information, they are more motivated to reduce their energy consumption \cite{Darby}.
